Use Java 17 .toList() in one place where it'd been forgotten